tests/integration/snapshots/integration__conformance__n_number_with_alpha.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[1.2a-3]
stdout ---

stderr ---
error: unexpected character `a`. expected start of a json value
 --> stdin:1:5
  |
1 | [1.2a-3]
  |     ^
